--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,16 @@ publish = false
 [dependencies]
 salvo = "0.58.3"
 serde = { version = "1.0.190", features = ["derive"] }
+sqlx = { version = "0.6", features = [
+    "runtime-tokio-rustls",
+    "postgres",
+    "macros",
+    "uuid",
+    "chrono",
+] }
+uuid = { version = "1.5.0", features = ["v4", "serde"] }
+chrono = { version = "0.4.31", features = ["serde"] }
 tokio = { version = "1", features = ["macros"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
+dotenv = "0.15.0"
